--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+	* Changed all "zegrep" stuff to "zgrep -e" stuff, since zegrep is
+	on fewer platforms than zgrep.
+
         * Added Bugzilla.search, a new command for searching a bugzilla
 	installation
 	 
