Removed set and unset, since they're not used at all by anyone.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+	* Removed Owner.{set,unset} since they matter not.
+	
 	* Made the smileys and frowns configurable in ChannelDB.
 
 	* Added an INVITE handler in Admin, allowing users with the admin
