--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+	* Changed the reply method of the irc object given to plugins not
+	to require a msg object.
+	
 	* Removed Owner.{set,unset} since they matter not.
 	
 	* Made the smileys and frowns configurable in ChannelDB.
