--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+	* Changed the format of the Alias database, and also its location
+	(to go to your configuration directory rather than your data
+	directory now).  Be sure, if you're upgrading, to run
+	tools/aliasConvert.py on your Alias.db *BEFORE* installing the new
+	version.
+	
+	* Changed the format of the user and channel databases to
+	something much more readable and user-editable.  Be sure, if
+	you're upgrading, to run tools/ircdbConvert.py on your user and
+	channel databases *BEFORE* installing the new version.
+	
 	* Added --{from,to} and --sent options to Note.sent.
 
 	* Changed channel capabilities to use a comma to separate the
